# cashier-printer

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  package.json  push_license.py
.claude/: settings.local.json
.github/workflows/: release.yml
.svelte-kit/: ambient.d.ts  non-ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/client/_app/immutable/assets/: 0.gmYr8YYm.css  5.C7G72cyk.css  GuidedTextarea.CMZAqX-P.css
.svelte-kit/output/client/_app/immutable/chunks/: 5-eTZw8_.js  C0INEqdn.js  CVYSSf5Q.js  CjkQlsDr.js  D1emaxcS.js  DH4dr_NT.js  DJg98mKw.js  Dz1Qw5Eh.js
.svelte-kit/output/server/: index.js  manifest-full.js  remote-entry.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/chunks/: index.js  internal.js  renderer.js  root.js  stores.js  stores.svelte.js
.svelte-kit/output/server/entries/fallbacks/: error.svelte.js
.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js  3.js  4.js  5.js  6.js
.svelte-kit/types/: route_meta_data.json
.svelte-kit/types/src/routes/: $types.d.ts
.svelte-kit/types/src/routes/history/: $types.d.ts
.svelte-kit/types/src/routes/new/: $types.d.ts
assets/: styles.css
src/: api.rs  components.rs  main.rs  types.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: app_cmds.rs  mod.rs  order_cmds.rs  print_cmds.rs  sync_cmds.rs
src-tauri/src/db/: mod.rs  orders.rs  settings.rs
src-tauri/src/print/: builder.rs  driver.rs
src-tauri/src/sync/: client.rs  discover.rs  mod.rs  server.rs
src/lib/: api.ts  types.ts
src/routes/edit/[id]/: +page.svelte
src/routes/history/: +page.svelte
src/routes/new/: +page.svelte
src/routes/settings/: +page.svelte
src/views/: edit.rs  history.rs  mod.rs  new.rs  settings.rs
(+13 files in other folders)
