# Dioxus (Rust → WASM) frontend for Print Paste Order.
# Built by Trunk and served inside the Tauri shell (see src-tauri/tauri.conf.json).
# The Tauri backend lives in its own standalone crate at ./src-tauri.
[package]
name = "cashier-printer-ui"
version = "0.9.91"
description = "Dioxus WASM frontend for Print Paste Order"
edition = "2021"
license = "MIT"

[dependencies]
dioxus = { version = "0.6", features = ["web"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
