[package]
name = "cashier-printer"
version = "0.1.0"
description = "Cashier Order Print Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "cashier_printer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Database
rusqlite = { version = "0.39", features = ["bundled"] }

# ESC/POS printing
escpos = { version = "0.17", features = ["serial_port", "native_usb"] }

# Cross-platform printer enumeration + raw byte dispatch
printers = "2.3"

# Serial port detection
serialport = "4"

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
textwrap = "0.16"

# LAN sync
tiny_http = "0.12"
uuid = { version = "1", features = ["v4"] }
ureq = { version = "2", default-features = false, features = ["json"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
